Bug 182910 - expanding thread in kmail no longer expands children automatically
Summary: expanding thread in kmail no longer expands children automatically
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-02 19:41 UTC by Mike Frysinger
Modified: 2009-08-16 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Frysinger 2009-02-02 19:41:59 UTC
Version:           1.11.0 (using KDE 4.2.0)
Compiler:          gcc 4.3.3 
OS:                Linux
Installed from:    Gentoo Packages

with kde-4.1 and older, expanding a thread (clicking the + next to the message in the message list) automatically expanded all children of that message.  with kde-4.2, that no longer happens and every message with children must be manually expanded.

for example, with a thread like this:
a
|-- b
|   |-- e
|   |   `-- g
|   `-- f
|-- c
`-- d

with older versions, hitting the + next to "a" would expand "b" and "e" as well.  with kde-4.2, "b" and "e" stay collapsed.

this makes reading large threads painful as there is no easy way to expand everything.
Comment 1 Jaime Torres 2009-02-13 10:07:39 UTC
This works for me using the menu view->Expand thread. It expands all the subthreads as well.
Tested in kmail 1.11.90 (kde 4.2.62).
Comment 2 Mike Frysinger 2009-02-13 18:23:36 UTC
the point of clicking the + was so that i wouldnt have to go through the menu system.  however, that does point out there is a shortcut '.' and ',' which i can use in the mean time.
Comment 3 Martin Koller 2009-08-16 00:57:16 UTC
I also found that different behavior a regression to kmail in KDE 3.5
Comment 4 Martin Koller 2009-08-16 12:23:06 UTC
A fix is waiting in the reviewboard http://reviewboard.kde.org/r/1332/
Comment 5 Martin Koller 2009-08-16 12:45:21 UTC
SVN commit 1011918 by mkoller:

BUG: 182910

expand full thread when opening the root message as it was done with the old treeview



 M  +16 -1     view.cpp  
 M  +4 -0      view.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1011918
Comment 6 Martin Koller 2009-08-16 12:47:05 UTC
SVN commit 1011919 by mkoller:


Backport r1011918 by mkoller from trunk to the 4.3 branch:

CCBUG: 182910

expand full thread when opening the root message as it was done with the old treeview




 M  +16 -1     view.cpp  
 M  +4 -0      view.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1011919