BUG: 182910

expand full thread when opening the root message as it was done with the old treeview


svn path=/trunk/KDE/kdepim/; revision=1011918